--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -15,7 +15,12 @@
 
   <ItemGroup>
     <PackageReference Include="LazyCache" Version="2.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="pathoschild.http.fluentclient" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
