--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=NEXUSTERMINAL;Initial Catalog=WhatChores;User ID=sa;Password=4r!4nde0;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
