Optimized API. Currently rewriting webapp in blazor.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.sln.docstates
 appsettings.json
 appsettings.Development.json
-
+tailwindcss-windows-x64.exe
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
