Added Integration Tests and updated endpoints.

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -24,8 +24,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
+	<ItemGroup>
+		<InternalsVisibleTo Include="MatchMaker.Api.IntegrationTests" />
+	</ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
